--- a/game/index.html
+++ b/game/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/assets/favicon.ico" />
   </head>
   <body>
+    <div id="game-container"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
