--- a/game/index.html
+++ b/game/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="/assets/favicon.ico" />
   </head>
   <body>
-    <div id="game-container"></div>
+    <div id="game-container" style="width: 1024px; height: 768px; margin: auto;"></div>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
